fix: min-width for all columns
Checkins column was too narrow so it was looking strange.

--- a/css/imbagraph.css
+++ b/css/imbagraph.css
@@ -210,6 +210,10 @@ p {
 /*
  * -- SORT --
  */
+.sort {
+  min-width: 6em;
+}
+
 .sort:after {
   display:inline-block;
   border-left: 5px solid transparent;
@@ -456,4 +460,8 @@ a.external:link {
     background-position: center right;
     background-repeat: no-repeat;
     padding-right: 13px;
+}
+
+.checkins {
+  text-align: right;
 }
